complete gameBoard methods; add HTML basic structure

--- a/gameplay.html
+++ b/gameplay.html
@@ -10,12 +10,26 @@
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 	<script src="https://kit.fontawesome.com/0467a2a6b6.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script type="css/javascript" src="assets/jss/jquery-3.4.1.js"></script> 
-    <script type="text/javascript" src="assets/jss/script.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 	
 </head>
 
 <body>
+    <div class="container">
+        <div class="playArea" id="messageArea">
+            Test message
+        </div>
+        <div class="playArea" id="gameArea">
+            &nbsp;
+        </div>
+        <div class="playArea" id="clockArea">
+            Time elapsed:
+        </div>
+        <div class="playArea" id="restartButton">
+            <button>Restart</button>
+        </div>
+    
+    </div>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
