--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 	<script src="https://kit.fontawesome.com/0467a2a6b6.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script type="css/javascript" src="assets/jss/jquery-3.4.1.js"></script> 
-    <script type="text/javascript" src="assets/jss/script.js"></script>
-	
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </head>
 
 <body>
     <div>
         <h1>Welcome to MindGym!</h1>
+    </div>
+    <div>
+        Hero image here
+    </div>
+    <div>
+        <span><a href="levelselection.html">Play!</a></span>
+        <span><a href=""><i class="fas fa-question-circle"></i></a></span>
     </div>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
