--- a/levelselection.html
+++ b/levelselection.html
@@ -10,14 +10,29 @@
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 	<script src="https://kit.fontawesome.com/0467a2a6b6.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script type="css/javascript" src="assets/jss/jquery-3.4.1.js"></script> 
-    <script type="text/javascript" src="assets/jss/script.js"></script>
+	<script type="text/javascript" src="assets/js/script.js"></script>
 </head>
 
 <body>
-    <div>
-        <h2>Select difficulty level</h2>
-    </div>
+	<div>
+		<h2>Select difficulty level</h2>
+	</div>
+	<div class="levelButton" onclick="gameBoard.generateBoard('Beginner')">
+		<h4>Beginner</h4>
+		<img src="" />
+		<h5>8 pairs</h5>
+	</div>
+	<a class="levelButton" onclick="gameBoard.generateBoard('Intermediate')">
+		<h4>Intermediate</h4>
+		<img src="" />
+		<h5>12 pairs</h5>
+	</a>
+	<a class="levelButton" onclick="gameBoard.generateBoard('Expert')">
+		<h4>Expert</h4>
+		<img src="" />
+		<h5>18 pairs</h5>
+	</a>
+
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
