add levelSelect function

--- a/levelselection.html
+++ b/levelselection.html
@@ -17,17 +17,17 @@
 	<div>
 		<h2>Select difficulty level</h2>
 	</div>
-	<div class="levelButton" onclick="gameBoard.generateBoard('Beginner')">
+	<div class="levelButton" onclick="levelSelect('Beginner')">
 		<h4>Beginner</h4>
 		<img src="" />
 		<h5>8 pairs</h5>
 	</div>
-	<a class="levelButton" onclick="gameBoard.generateBoard('Intermediate')">
+	<a class="levelButton" onclick="levelSelect('Intermediate')">
 		<h4>Intermediate</h4>
 		<img src="" />
 		<h5>12 pairs</h5>
 	</a>
-	<a class="levelButton" onclick="gameBoard.generateBoard('Expert')">
+	<a class="levelButton" onclick="levelSelect('Expert')">
 		<h4>Expert</h4>
 		<img src="" />
 		<h5>18 pairs</h5>
