--- a/levelselection.html
+++ b/levelselection.html
@@ -12,6 +12,28 @@
 </head>
 
 <body>
+    <!-- Navbar code copied from Bootstrap documentation and adapted -->
+	<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="index.html">Home </a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="levelselection.html">Play<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#" data-toggle="modal" data-target="#instructionsModal">Instructions</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<!-- /.Navbar -->
+
 	<div>
 		<h2>Select difficulty level</h2>
 	</div>
