--- a/gameplay.html
+++ b/gameplay.html
@@ -12,7 +12,28 @@
 </head>
 
 <body onload="gameBoard.generateBoard()">
-    <div class="container">
+    <!-- Navbar code copied from Bootstrap documentation and adapted -->
+	<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="levelselection.html">Play</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#" data-toggle="modal" data-target="#instructionsModal">Instructions</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<!-- /.Navbar -->
+    <div class="container-md">
         <div class="playArea" id="messageArea">
             Test message
         </div>
@@ -22,9 +43,14 @@
             <form id="restartForm">
                 <button id="restartButton" onclick="gameBoard.restartGame()">Restart</button>
             </form>
-        </div>
-    
+        </div>    
     </div>
+
+    <footer>
+        <div class="footerBar">
+            Copyright 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
+        </div>
+    </footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
