--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 		</div>
 	</div>
     <!-- /.Modal -->
+    <footer>
+        <div class="footerBar">
+            Copyright 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
+        </div>
+    </footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
