add font color selection logic to messageDisplay

--- a/gameplay.html
+++ b/gameplay.html
@@ -35,7 +35,7 @@
   <!-- /.Navbar -->
     <div class="container-md">
         <div class="playArea" id="messageArea">
-            Test message
+            &nbsp;
         </div>
         <div class="playArea" id="gameArea">
         </div>
