--- a/levelselection.html
+++ b/levelselection.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>MindGym - select difficulty level</title>
+    <link href="https://fonts.googleapis.com/css?family=Kalam:300,400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
@@ -14,7 +15,7 @@
 <body>
 	<!-- Navbar code copied from Bootstrap documentation and adapted -->
 	<nav class="navbar navbar-expand-sm navbar-light bg-light">
-		<a class="navbar-brand" href="index.html">Navbar</a>
+		<a class="navbar-brand" href="index.html"><img src="assets/img/favicon-32x32.png" /></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
