add images to all pages; add tile styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
   <!-- /.Navbar -->
-  <div class="container">
+  <div class="container-fluid homeContainer">
         <div>
             <h1>Welcome to MindGym!</h1>
         </div>
@@ -73,7 +73,7 @@
   <!-- /.Modal -->
   <footer>
     <div class="footerBar">
-      Copyright 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
+      &copy; 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
     </div>
   </footer>
 
