--- a/levelselection.html
+++ b/levelselection.html
@@ -34,51 +34,53 @@
 		</div>
 	</nav>
 	<!-- /.Navbar -->
-	<div class="container">
+	<div class="container levelContainer">
 		<div>
 			<h2>Select difficulty level</h2>
 		</div>
-		<div class="levelButton">
-			<div class="levelButtonContainer">
-				<div class="levelButtonFront">
-                    <img src="" />
-				</div>
-				<div class="levelButtonBack" onclick="levelSelect('beginner')">
-					<h4>Beginner</h4>
-					<img src="" />
-					<h5>8 pairs</h5>
-				</div>
-			</div>
-		</div>
-		<div class="levelButton">
-			<div class="levelButtonContainer">
-				<div class="levelButtonFront">
-                    <img src="" />
-				</div>
-				<div class="levelButtonBack" onclick="levelSelect('intermediate')">
-					<h4>Intermediate</h4>
-					<img src="" />
-					<h5>12 pairs</h5>
-				</div>
-			</div>
-		</div>
-		<div class="levelButton">
-			<div class="levelButtonContainer">
-				<div class="levelButtonFront">
-                    <img src="" />
-				</div>
-				<div class="levelButtonBack" onclick="levelSelect('expert')">
-					<h4>Expert</h4>
-					<img src="" />
-					<h5>18 pairs</h5>
-				</div>
-			</div>
-		</div>
+        <div class="levelWrapper">
+            <div class="levelButton">
+                <div class="levelButtonContainer">
+                    <div class="levelButtonFront">
+                        <img src="assets/img/beginner.jpg" height="180px" width="150px" />
+                    </div>
+                    <div class="levelButtonBack" onclick="levelSelect('beginner')">
+                        <h4>Beginner</h4>
+                        <img src="" />
+                        <h5>8 pairs</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="levelButton">
+                <div class="levelButtonContainer">
+                    <div class="levelButtonFront">
+                        <img src="assets/img/intermediate.jpg" height="180px" width="120px" />
+                    </div>
+                    <div class="levelButtonBack" onclick="levelSelect('intermediate')">
+                        <h4>Intermediate</h4>
+                        <img src="" />
+                        <h5>12 pairs</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="levelButton">
+                <div class="levelButtonContainer">
+                    <div class="levelButtonFront">
+                        <img src="assets/img/expert.jpg" height="180px" width="150px" />
+                    </div>
+                    <div class="levelButtonBack" onclick="levelSelect('expert')">
+                        <h4>Expert</h4>
+                        <img src="" />
+                        <h5>18 pairs</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</div>
 
 	<footer>
 		<div class="footerBar">
-			Copyright 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
+			&copy; 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
 		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
