--- a/gameplay.html
+++ b/gameplay.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
   <!-- /.Navbar -->
-    <div class="container-md">
+    <div class="container-md gameContainer">
         <div class="playArea" id="messageArea">
             &nbsp;
         </div>
@@ -49,7 +49,7 @@
 
     <footer>
         <div class="footerBar">
-            Copyright 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
+            &copy; 2020 by <a href="https://github.com/bravoalpha79">bravoalpha79</a> for educational purposes.
         </div>
     </footer>
 
