fix page/image structure and tile display; modify buttons

--- a/index.html
+++ b/index.html
@@ -35,20 +35,18 @@
     </div>
   </nav>
   <!-- /.Navbar -->
-  <div class="container-fluid homeContainer">
+  <div class="container-fluid">
+    <div class="homeWrapper">
         <div>
             <h1>Welcome to MindGym!</h1>
         </div>
-        <div class="hero">
-            Hero image here
-        </div>
-        <div>
+        <div class="homeForm">
             <form action="levelselection.html">
-                <button id="playButton" class="btn btn-large btn-success" type="submit">Play!</button>
+                <button id="playButton" class="btn btn-large btn-primary" type="submit">Play!</button>
                 <span><a href="#" data-toggle="modal" data-target="#instructionsModal"><i class="fas fa-question-circle"></i></a></span>
             </form>
-
         </div>
+    </div>
   </div>
   <!-- Modal code copied from Bootstrap documentation and adapted -->
   <div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-labelledby="instructionsModalLabel"
