--- a/levelselection.html
+++ b/levelselection.html
@@ -34,44 +34,47 @@
 		</div>
 	</nav>
 	<!-- /.Navbar -->
-	<div class="container levelContainer">
-		<div>
-			<h2>Select difficulty level</h2>
-		</div>
+	<div class="container-fluid">
         <div class="levelWrapper">
-            <div class="levelButton">
-                <div class="levelButtonContainer">
-                    <div class="levelButtonFront">
-                        <img src="assets/img/beginner.jpg" height="180px" width="150px" />
-                    </div>
-                    <div class="levelButtonBack" onclick="levelSelect('beginner')">
-                        <h4>Beginner</h4>
-                        <img src="" />
-                        <h5>8 pairs</h5>
+            <div>
+                <h2>Select difficulty level</h2>
+            </div>
+            <div class="buttonWrapper">
+                <div class="levelButton">
+                    <div class="levelButtonContainer">
+                        <div class="levelButtonFront">
+                            <img src="assets/img/beginner.jpg" height="180px" width="150px" />
+                        </div>
+                        <div class="levelButtonBack" onclick="levelSelect('beginner')">
+                            <h4>Beginner</h4>
+                            <img src="assets/img/beginner/beginnerPair1.png" height="80px" width="80px"/>
+                            <h5>8 pairs</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="levelButton">
-                <div class="levelButtonContainer">
-                    <div class="levelButtonFront">
-                        <img src="assets/img/intermediate.jpg" height="180px" width="120px" />
-                    </div>
-                    <div class="levelButtonBack" onclick="levelSelect('intermediate')">
-                        <h4>Intermediate</h4>
-                        <img src="" />
-                        <h5>12 pairs</h5>
+                <div class="levelButton">
+                    <div class="levelButtonContainer">
+                        <div class="levelButtonFront">
+                            <img src="assets/img/intermediate.jpg" height="180px" width="120px" />
+                        </div>
+                        <div class="levelButtonBack" onclick="levelSelect('intermediate')">
+                            <h4>Intermediate</h4>
+                            <div>
+                            </div>
+                            <h5>12 pairs</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="levelButton">
-                <div class="levelButtonContainer">
-                    <div class="levelButtonFront">
-                        <img src="assets/img/expert.jpg" height="180px" width="150px" />
-                    </div>
-                    <div class="levelButtonBack" onclick="levelSelect('expert')">
-                        <h4>Expert</h4>
-                        <img src="" />
-                        <h5>18 pairs</h5>
+                <div class="levelButton">
+                    <div class="levelButtonContainer">
+                        <div class="levelButtonFront">
+                            <img src="assets/img/expert.jpg" height="180px" width="150px" />
+                        </div>
+                        <div class="levelButtonBack" onclick="levelSelect('expert')">
+                            <h4>Expert</h4>
+                            <img src="assets/img/expert/expertPair12.png" height="80px" width="80px"/>
+                            <h5>18 pairs</h5>
+                        </div>
                     </div>
                 </div>
             </div>
