fix message display on small screens

--- a/gameplay.html
+++ b/gameplay.html
@@ -36,12 +36,12 @@
   <!-- /.Navbar -->
     <div class="container-fluid">
         <div class="gameWrapper">
-            <div class="playArea" id="messageArea">
+            <div class="messageArea" id="messageAreaTop">
                 &nbsp;
             </div>
-            <div class="playArea" id="gameArea">
+            <div id="gameArea">
             </div>
-            <div class="playArea" id="restartArea">
+            <div id="restartArea">
                 <form id="restartForm">
                     <button class="btn btn-large btn-primary" id="restartButton" onclick="gameBoard.restartGame()">Restart</button>
                 </form>
