add avatar and message bubble

--- a/gameplay.html
+++ b/gameplay.html
@@ -43,10 +43,20 @@
             </div>
             <div id="restartArea">
                 <form id="restartForm">
-                    <button class="btn btn-large btn-primary" id="restartButton" onclick="gameBoard.restartGame()">Restart</button>
+                    <button class="btn btn-primary" id="restartButton" onclick="gameBoard.restartGame()">Restart</button>
                 </form>
             </div>
-        </div>    
+            <div class="avatarArea">
+                <div class="avatarImage">
+                </div>
+                <div class="bubbleWrapper">
+                    <div class="textBubble">
+                        <div class="messageArea" id="messageAreaSide">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer>
