change jpg to png; modify media queries; modify color layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- Navbar code copied from Bootstrap documentation and adapted -->
-  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <nav class="navbar navbar-expand-sm navbar-dark">
     <a class="navbar-brand" href="index.html"><img src="assets/img/favicon-32x32.png" alt="mindgym icon"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
