--- a/levelselection.html
+++ b/levelselection.html
@@ -14,7 +14,7 @@
 
 <body>
 	<!-- Navbar code copied from Bootstrap documentation and adapted -->
-	<nav class="navbar navbar-expand-sm navbar-light bg-light">
+	<nav class="navbar navbar-expand-sm navbar-dark">
 		<a class="navbar-brand" href="index.html"><img src="assets/img/favicon-32x32.png" alt="mindgym icon"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,10 +43,10 @@
                 <div class="levelButton">
                     <div class="levelButtonContainer">
                         <div class="levelButtonFront">
-                            <img src="assets/img/beginner.jpg" height="180" width="150" alt="toddler"/>
+                            <img src="assets/img/beginner.png" height="200" width="200" alt="toddler"/>
                         </div>
                         <div class="levelButtonBack" onclick="levelSelect('beginner')">
-                            <h4>Beginner</h4>
+                            <h4>Rookie</h4>
                             <img src="assets/img/beginner/beginnerPair1.png" height="80" width="80" alt="beginner tile"/>
                             <h5>8 pairs</h5>
                         </div>
@@ -55,10 +55,10 @@
                 <div class="levelButton">
                     <div class="levelButtonContainer">
                         <div class="levelButtonFront">
-                            <img src="assets/img/intermediate.jpg" height="180" width="120" alt="boy"/>
+                            <img src="assets/img/intermediate.png" height="200" width="200" alt="boy"/>
                         </div>
                         <div class="levelButtonBack" onclick="levelSelect('intermediate')">
-                            <h4>Intermediate</h4>
+                            <h4>Experienced</h4>
                             <div>
                             </div>
                             <h5>12 pairs</h5>
@@ -68,10 +68,10 @@
                 <div class="levelButton">
                     <div class="levelButtonContainer">
                         <div class="levelButtonFront">
-                            <img src="assets/img/expert.jpg" height="180" width="150" alt="super boy"/>
+                            <img src="assets/img/expert.png" height="200" width="200" alt="super boy"/>
                         </div>
                         <div class="levelButtonBack" onclick="levelSelect('expert')">
-                            <h4>Expert</h4>
+                            <h4>Hero</h4>
                             <img src="assets/img/expert/expertPair12.png" height="80" width="80" alt="expert tile"/>
                             <h5>18 pairs</h5>
                         </div>
