add modal styling

--- a/gameplay.html
+++ b/gameplay.html
@@ -71,17 +71,17 @@
           <div class="modal-body">
             <ol>
               <li>
-                Click "Play".
+                <small>Click "Play".</small>
               </li>
               <li>
-                Select a difficulty level to start the game. 
+                <small>Select a difficulty level to start the game.</small> 
               </li>
               <li>
                 Select two tiles. <br />
                 If the two tiles match, they will be removed from the board. <br />
                 If they don't, they will be flipped back. <br />
                 Rinse and repeat until the board is clear. <br />
-                When the board is clear, the game is completed. <br />
+                When the board is clear, the game is completed.
               </li>
               <li>
                 During a game, you can click "Restart" at any time to restart the game with the same difficulty level.
@@ -92,7 +92,7 @@
             </ol>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn--modal" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
