--- a/levelselection.html
+++ b/levelselection.html
@@ -93,7 +93,7 @@
           <div class="modal-body">
             <ol>
               <li>
-                Click "Play".
+                <small>Click "Play".</small>
               </li>
               <li>
                 Select a difficulty level to start the game. 
@@ -103,18 +103,18 @@
                 If the two tiles match, they will be removed from the board. <br />
                 If they don't, they will be flipped back. <br />
                 Rinse and repeat until the board is clear. <br />
-                When the board is clear, the game is completed. <br />
+                When the board is clear, the game is completed. 
               </li>
               <li>
-                During a game, you can click "Restart" at any time to restart the game with the same difficulty level.
+                During a game, you can click "Restart" at any time to restart the game with the same difficulty level. 
               </li>
               <li>
-                After a game is completed, clicking "Play again" will take you back to difficulty level selection.
+                After a game is completed, clicking "Play again" will take you back to difficulty level selection. 
               </li>
             </ol>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn--modal" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
