--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
              </ol>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn--modal" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
